--- a/pom.xml
+++ b/pom.xml
@@ -3,14 +3,15 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>io.codebyexample</groupId>
-    <artifactId>spring-boot-template</artifactId>
+    <groupId>io.samplecode</groupId>
+    <artifactId>spring-boot-service-discovery-eureka-example</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>Parent</name>
 
     <modules>
-        <module>hello-world</module>
+        <module>service-A</module>
+        <module>service-B</module>
     </modules>
 
     <build>
