--- a/docker-compose-service.yml
+++ b/docker-compose-service.yml
@@ -1,8 +1,8 @@
 version: "3.4"
 services:
-  hello-world:
-    build: hello-world
-    container_name: 'hello-world'
+  service-b:
+    build: ./service-B
+    container_name: service-B
     environment:
       - spring_profiles_active=docker
     ports:
